--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
             "Porque para mim o viver é Cristo e o morrer é lucro. (Filipenses 1:21)",
             "Pois há um só Deus e um só mediador entre Deus e os homens: o homem Cristo Jesus, o qual se entregou a si mesmo como resgate por todos. Esse foi o testemunho dado em seu próprio tempo. (1 Timóteo 2:5-6)",
             "Se você confessar com a sua boca que Jesus é Senhor e crer em seu coração que Deus o ressuscitou dentre os mortos, será salvo. Pois com o coração se crê para justiça, e com a boca se confessa para salvação. (Romanos 10:9-10)",
-            "Pois vocês são salvos pela graça, por meio da fé, e isto não vem de vocês, é dom de Deus; não por obras, para que ninguém se glorie. (Efésios 2:8-9)"
+            "Pois vocês são salvos pela graça, por meio da fé, e isto não vem de vocês, é dom de Deus; não por obras, para que ninguém se glorie. (Efésios 2:8-9)",
         ];
 
         // Função para gerar uma mensagem aleatória
